build/kubernetes/api.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: flag
  name: flag-api-deploy
spec:
  replicas: 1
  template:
    metadata:
      namespace: flag
      labels:
        name: flag-api-pods
    spec:
      containers:
        - image: cescoferraro/flag:api-0.0.5
          imagePullPolicy: Always
          name: backend
