build/kubernetes/frontend.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: flag
  name: flag-frontend-deploy
spec:
  replicas: 1
  template:
    metadata:
      namespace: flag
      labels:
        name: flag-frontend-pods
    spec:
      containers:
        - image: cescoferraro/flag:frontend-0.0.6
          imagePullPolicy: Always
          name: frontend
