build/kubernetes/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: flag
  name: flag-frontend-svc
spec:
  selector:
    name: flag-frontend-pods
  ports:
  - name: web
    port: 5000
    targetPort: 5000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  namespace: flag
  name: flag-api-svc
spec:
  selector:
    name: flag-api-pods
  ports:
  - name: web
    port: 7070
    targetPort: 7070
    protocol: TCP
